--- a/index.css
+++ b/index.css
@@ -50,4 +50,24 @@
 }
 .filter-btn {
   margin: 2px;
+  cursor: pointer;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  height: 400px;
+  width: 200px;
+  background-color: #f0f0f0;
+  margin: 20px;
+}
+.login {
+  padding: 0 20px;
+  cursor: pointer;
+}
+.filter {
+  display: flex;
 }
